bulk changes in servlet IPL
bulk changes in servlet IPL

--- a/servlrt_ipl_project/WebContent/CSS/welcome.css
+++ b/servlrt_ipl_project/WebContent/CSS/welcome.css
@@ -1,5 +1,135 @@
 body{
 	height:100%;
 	width:100%;
-	background-color:white;
+	background-image:
+		url("../Images/bgimage1.png");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	overflow:hidden;
+}
+.full-body-class{
+	height:100%;
+	width:100%;
+	position : relative;
+	display : flex;
+	flex-direction : row;
+	font-size : 16px;
+}
+.left-side-page{
+	height:100%;
+	width : 200px;
+	background-color : white;
+	opacity : 0.85;
+}
+.logo-div{
+	height : 130px;
+	width : 100%;
+	position : relative;
+	top : 10px;
+	left : 10px;
+	background-repeat: no-repeat;
+}
+.profile-div{
+	height : 50px;
+	width : 100%;
+	position : relative;
+	background-color : #4db8ff;
+	background-repeat: no-repeat;
+	color : white;
+	padding-top : 9px;
+	padding-left : 5px;
+}
+.text-decor{
+	padding-left : 15px;
+	padding-top:13px;
+}
+.profile-div:hover{
+	opacity : 0.5;
+	border-right-style: solid;
+	border-right-width: 5px;
+	border-right-color : #0047b3;
+}
+.right-side-page{
+	display : flex;
+	flex-direction : column;
+	height : 768px;
+	width:100%;
+	background-color : white;
+	opacity : 0.95;
+	position : relative;
+}
+.top-right-side-div{
+	height : 50px;
+	width : 100%;
+	position : relative;
+	background-color : #293979;
+}
+.logout-button-class{
+	position : absolute;
+	float : right;
+	top : 5px;
+	right : 5px;
+	background-color : red;
+}
+.search-bar-div{
+	height : 70px;
+	width : 100%;
+	top : 50px;
+	position : fixed;
+	background-color : red;
+}
+.All-Drop-Down{
+	display : flex;
+	flex-direction : row;
+}
+.Position-Title-Drop-Down{
+	position : relative;
+	top : 17px;
+	left : 20px;
+	background-color : #007bff;
+}
+.Profile-Type-Drop-Down{
+	position : relative;
+	top : 17px;
+	left : 40px;
+	background-color : #007bff;
+}
+.Teams-Drop-Down{
+	position : relative;
+	top : 17px;
+	left : 40px;
+	background-color : #007bff;
+}
+.Country-Drop-Down{
+	position : relative;
+	top : 17px;
+	left : 40px;
+	background-color : #007bff;
+}
+.listing-parent-div{
+	height : 648px;
+	width : 100%;
+	position : relative;
+	display : flex;
+	flex-direction : column;
+	top : 120px;
+}
+.header-div{
+	height : 45px;
+	width : 99%;
+	position : absolute;
+	left : 6.83px;
+	right : 6.83px;
+}
+.personal-details-container{
+	display : flex;
+	flex-direction :column;
+	height : 603px;
+	width : 99%;
+	position : relative;
+	left : 6.83px;
+	right : 6.83px;
+	top : 45px;
+	overflow-y:auto;
 }
