--- a/servlrt_ipl_project/WebContent/VIEWS/testWelcome.html
+++ b/servlrt_ipl_project/WebContent/VIEWS/testWelcome.html
@@ -6,32 +6,64 @@
 <link rel="stylesheet" href="../CSS/bootstrap.min.css">
 <link rel="stylesheet" href="../CSS/welcome.css">
 <link rel="stylesheet" href="../CSS/Avenir Medium/Avenir Medium.ttf">
-<script type="text/javascript" src="../JS/welcome.js"></script>
 <script type="text/javascript" src="../JS/bootstrap.js"></script>
 <script type="text/javascript" src="../JS/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="../JS/bootstrap.bundle.js"></script>
 </head>
 <body>
-	<div class = full-body-class>
-		<div class = left-side-page>
-			<div class = logo-div>
-				<img src="../Images/LOGO (2).png"></img>
+	<div class=full-body-class id= "full-body-class">
+		<div class=left-side-page id = "left-side-class">
+			<div class=logo-div>
+				<img src="../Images/LOGO (2).png">
 			</div>
-			<div class = profile-div>
-				<img src="../Images/2x/baseline_person_white_18dp.png" style="width:29px;height:29px;"></img>
-				<span class = text-decor>Profiles</span>
+			<div class=profile-div>
+				<img src="../Images/2x/baseline_person_white_18dp.png"
+					style="width: 29px; height: 29px;"> <span class=text-decor>Profiles</span>
 			</div>
 		</div>
-		<div class = right-side-page>
-			<div class = top-right-side-div>
+		<div class=right-side-page id ="right-side-class">
+			<div class=top-right-side-div>
 				<button type="button" class="btn btn-primary logout-button-class">Logout</button>
 			</div>
-			<div class = search-bar-div>
+			<div class=search-bar-div>
 				<div class="dropdown All-Drop-Down">
-					<button class="btn btn-secondary dropdown-toggle Position-Title-Drop-Down" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Position Title
-					</button>
-					<button class="btn btn-secondary dropdown-toggle Profile-Type-Drop-Down" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<div class="dropdown-button">
+						<button class="button-classes" id= "button-dropdown-Id" type="button" onclick="popup()">
+							<span id="dropdown-button-clicker">Position Title </span><span><img
+								src="../Images/caret-down-solid.svg"
+								style="width: 29px; height: 21px; margin-bottom: 5px; margin-left: 6px;">
+							</span>
+						</button>
+						<div class="dropdown-contents" id="drop-down-item-content"
+							style="display: none;">
+							<div class="dropdown-elements">
+								<input type="checkbox" id="checkerId"> <span
+									class="checkmark"></span> Batsman
+							</div>
+							<div class="dropdown-elements">
+								<input type="checkbox" id="checkerId"> <span
+									class="checkmark"></span> Bowler
+							</div>
+							<div class="dropdown-elements">
+								<input type="checkbox" id="checkerId"> <span
+									class="checkmark"></span> All-Rounder
+							</div>
+							<div class="dropdown-elements">
+								<input type="checkbox" id="checkerId"> <span
+									class="checkmark"></span> Coach
+							</div>
+							<div class="dropdown-elements">
+								<input type="checkbox" id="checkerId"> <span
+									class="checkmark"></span> Mentor
+							</div>
+							<div class="dropdown-elements">
+								<input type="checkbox" id="checkerId"> <span
+									class="checkmark"></span> Umpire
+							</div>
+						</div>
+					</div>
+
+					<!--<button class="btn btn-secondary dropdown-toggle Profile-Type-Drop-Down" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Profile Type
 					</button>
 					<button class="btn btn-secondary dropdown-toggle Teams-Drop-Down" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -39,16 +71,15 @@
 					</button>
 					<button class="btn btn-secondary dropdown-toggle Country-Drop-Down" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Countries
-					</button>
+					</button>-->
 				</div>
 			</div>
-			<div class = listing-parent-div>
-				<div class = header-div>
-				</div>
-				<div class = personal-details-container>
-				</div>
+			<div class=listing-parent-div>
+				<div class=header-div></div>
+				<div class=personal-details-container></div>
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src="../JS/welcome.js"></script>
 </body>
 </html>
