--- a/servlrt_ipl_project/WebContent/CSS/welcome.css
+++ b/servlrt_ipl_project/WebContent/CSS/welcome.css
@@ -1,26 +1,26 @@
 body{
 	height:100%;
 	width:100%;
-	background-image:
-		url("../Images/bgimage1.png");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
 	overflow:hidden;
 }
 .full-body-class{
-	height:100%;
-	width:100%;
+	height:670px;
+	width:1366px;
 	position : relative;
 	display : flex;
 	flex-direction : row;
 	font-size : 16px;
+	background-image:
+		url("../Images/bgimage1.png");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 .left-side-page{
 	height:100%;
 	width : 200px;
 	background-color : white;
 	opacity : 0.85;
+	position : relative;
 }
 .logo-div{
 	height : 130px;
@@ -53,17 +53,20 @@ body{
 .right-side-page{
 	display : flex;
 	flex-direction : column;
+	/* height : 100%;
+	width:100%; */
 	height : 768px;
-	width:100%;
+	width : 1192px;
 	background-color : white;
 	opacity : 0.95;
 	position : relative;
 }
 .top-right-side-div{
-	height : 50px;
+	height : 60px;
 	width : 100%;
 	position : relative;
 	background-color : #293979;
+	z-index: 1;
 }
 .logout-button-class{
 	position : absolute;
@@ -75,19 +78,16 @@ body{
 .search-bar-div{
 	height : 70px;
 	width : 100%;
-	top : 50px;
-	position : fixed;
-	background-color : red;
+	position : relative;
+	background-color : white;
+	display : flex;
+	flex-direction: row;
 }
 .All-Drop-Down{
+	height : 100%;
+	width : 741px;
 	display : flex;
 	flex-direction : row;
-}
-.Position-Title-Drop-Down{
-	position : relative;
-	top : 17px;
-	left : 20px;
-	background-color : #007bff;
 }
 .Profile-Type-Drop-Down{
 	position : relative;
@@ -108,28 +108,309 @@ body{
 	background-color : #007bff;
 }
 .listing-parent-div{
-	height : 648px;
+	height : 100%;
 	width : 100%;
 	position : relative;
 	display : flex;
 	flex-direction : column;
-	top : 120px;
 }
 .header-div{
-	height : 45px;
-	width : 99%;
-	position : absolute;
-	left : 6.83px;
-	right : 6.83px;
-}
-.personal-details-container{
-	display : flex;
-	flex-direction :column;
-	height : 603px;
+	height : 10%;
 	width : 99%;
 	position : relative;
 	left : 6.83px;
 	right : 6.83px;
-	top : 45px;
+	display : flex;
+	flex-direction: row;
+	box-shadow: 5px 5px 5px #989898;
+}
+.personal-details-container{
+	display : flex;
+	flex-direction :column;
+	height : 90%;
+	width : 99%;
+	position : relative;
+	left : 6.83px;
+	right : 6.83px;
 	overflow-y:auto;
+}
+.dropdown-button{
+	position : relative;
+	height : 45px;
+	width : 150px;
+	top : 12px;
+	left : 50px;
+	display : flex;
+	flex-direction : column;
+}
+.button-classes{
+	width : 150px;
+	height : 45px;
+	border-radius : 2px solid;
+	background-color : #0066ff;
+	color : white;
+}
+.dropdown-contents{
+	height : 45px;
+	width : 150px;
+	border-bottom : 1px solid;
+	display : none;
+	z-index: 1;
+	color : white;
+}
+.dropdown-elements{
+	position : relative;
+	padding-top : 10px;
+	padding-left : 10px;
+	height : 100%;
+	width : 100%;
+	border : 1px solid black;
+	z-index: 1;
+	background-color: #0099ff;
+}
+.dropdown-button1{
+	position : relative;
+	height : 45px;
+	width : 150px;
+	top : 12px;
+	left : 80px;
+}
+.dropdown-button2{
+	position : relative;
+	height : 45px;
+	width : 150px;
+	top : 12px;
+	left : 110px;
+}
+.dropdown-button3{
+	position : relative;
+	height : 45px;
+	width : 150px;
+	top : 12px;
+	left : 140px;
+}
+.Search-button-class{
+	position : relative;
+	height : 45px;
+	width : 150px;
+	top : 12px;
+	left : 30px;
+}
+.button-Search{
+	height : 100%;
+	width : 100%;
+	background-color : seagreen;
+	color :white;
+}
+.Export-button-class{
+	position : relative;
+	height : 45px;
+	width : 150px;
+	top : 12px;
+	left : 60px;
+}
+.button-Export{
+	height : 100%;
+	width : 100%;
+	background-color : seagreen;
+	color :white;
+}
+.search-and-export{
+	height : 100%;
+	width : 451px;
+	display : flex;
+	flex-direction : row;
+}
+.Name-div{
+	position: relative;
+	height : 25px;
+	width : 50px;
+	left : 135px;
+	top : 20px;
+	color : #293979;
+	font-weight: bold;
+}
+.Team-div{
+	position: relative;
+    height: 25px;
+    width: 50px;
+    left: 280px;
+    top: 20px;
+	font-weight: bold;
+}
+.Position-Title-div{
+	position: relative;
+    height: 25px;
+    width: 100px;
+    left: 400px;
+    top: 20px;
+	font-weight: bold;
+}
+.Type-div{
+	position: relative;
+    height: 25px;
+    width: 50px;
+    left: 550px;
+    top: 20px;
+	font-weight: bold;
+}
+.DOB-div{
+	position: relative;
+    height: 25px;
+    width: 100px;
+    left: 700px;
+    top: 20px;
+	font-weight: bold;
+}
+.single-person-details{
+	height : 10%;
+	width : 100%;
+	position : relative;
+	display : flex;
+	flex-direction : row;
+	border-bottom : 1px solid black;
+}
+.single-person-details:hover{
+	background-color: #d9d9d9;
+}
+.border-details-div{
+	height : 83%;
+	width: 5px;
+	position : relative;
+	top : 5px;
+	bottom : 1px;
+	background-color : #293979;
+}
+.profile-pic-div{
+	height: 83%;
+    width: 48px;;
+    position: relative;
+    top: 5px;
+    left: 35px;
+    bottom: 1px;
+	border-radius: 50px;
+	border : 1px solid;
+}
+.profile-Name-div{
+	height: 83%;
+    width: 17%;
+    position: relative;
+    top: 8%;
+	left: 4%;
+	font-weight: bold;
+	color : #293979;
+}
+.profile-team-div{
+	height: 83%;
+    width: 14%;
+    position: relative;
+    top: 8%;
+	left: 4%;
+	font-weight: bold;
+	color : #293979;
+}
+.profile-position-div{
+	height: 83%;
+    width: 21%;
+    position: relative;
+    left: 5%;
+	top: 8%;
+	font-weight: bold;
+	color : #293979;
+}
+.profile-type-div{
+	height: 83%;
+    width: 17%;
+    position: relative;
+    left: 4%;
+	top: 8%;
+	font-weight: bold;
+	color : #293979;
+}
+.date-of-brth-div{
+	height: 83%;
+    width: 20%;
+    top: 8%;
+    position: relative;
+	left: 4%;
+	font-weight: bold;
+	color : #293979;
+}
+.names-div{
+	height : 63%;
+	width : 95%;
+	position : relative;
+	top:20%;
+	left : 5%;
+}
+.profile-team-name-div{
+	height : 63%;
+	width : 95%;
+	position : relative;
+	top:20%;
+	left : 22%;
+}
+.position-title-name-div{
+	height : 63%;
+	width : 95%;
+	position : relative;
+	top:20%;
+	left : 15%;
+}
+.profile-type-name-div{
+	height : 63%;
+	width : 95%;
+	position : relative;
+	top:20%;
+	left : 17%;
+}
+.DOB-div-2{
+	height : 63%;
+	width : 95%;
+	position : relative;
+	top:20%;
+	left : 17%;
+}
+.Loader-personal-details{
+	height : 20%;
+	width : 40%;
+	position : relative;
+	left : 35%;
+	top : 10%; 
+}
+.pagination-div{
+	height : 10%;
+	width : 100%;
+	position : relative;
+	display : flex;
+	flex-direction:row;
+}
+.previous-div{
+	top: 15%;
+    left: 8%;
+    position: relative;
+    width: 15%;
+    height: 80%;
+}
+.next-div{
+	top: 15%;
+    position: relative;
+    width: 15%;
+    height: 80%;
+    left: 52%;
+}
+.page-No-div{
+	top: 15%;
+    left: 26%;
+    position: relative;
+    width: 10%;
+    height: 80%;
+	text-align: center;
+	color : white;
+}
+.button-previous{
+	width: 100%;
+	height:100%;
+	font-weight: bold;
+	color : black;
 }
